fix(episodetranscript): jump button background color match theme

--- a/components/Listen/Episode/EpisodeTranscript.module.scss
+++ b/components/Listen/Episode/EpisodeTranscript.module.scss
@@ -37,7 +37,7 @@
 
   padding: 0.5rem 1rem;
 
-  background-color: colors.$black-a-80;
+  background-color: var(--listen-background-color);
 
   border: 2px solid var(--_jump-button--color);
   border-radius: 100vw;
